--- a/Web application/Gemfile
+++ b/Web application/Gemfile
@@ -5,6 +5,7 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
+ruby '2.4.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.1'
@@ -21,9 +22,16 @@ gem 'coffee-rails', '~> 4.2'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
 
-gem 'simple_form'
 
-gem 'haml'
+
+gem 'simple_form' #для упрощения работы с формами
+gem 'haml' #для работы с haml
+gem 'carrierwave', '~> 1.0' #для загрузки картинок
+gem 'mini_magick' #мин и макс размер картинки
+gem 'devise' #для регистрации пользователей
+gem 'active_model_serializers', '~> 0.10.0' #для сериализации объектов
+
+
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
@@ -51,6 +59,10 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+end
+
+group :production do
+  gem 'rails_12factor'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
